challenge-1/openldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  labels:
    app.kubernetes.io/name: openldap
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: openldap
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openldap
    spec:
      containers:
        - name: openldap
          image: docker.io/bitnami/openldap:latest
          imagePullPolicy: "IfNotPresent"
          lifecycle:
            postStart:
              exec:
                command:
                - /bin/sh
                - -c
                - |
                  sleep 30
                  ldapadd -H ldap://localhost:1389 -x -D cn=admin,dc=example,dc=org -w adminpassword -f tmp/james.ldif
          ports:
            - name: tcp-ldap
              containerPort: 1389
          volumeMounts:
          - name: config-volume
            mountPath: /tmp/
      volumes:
      - name: config-volume
        configMap:
          name: ldap-user-config
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    app.kubernetes.io/name: openldap
spec:
  type: ClusterIP
  ports:
    - name: tcp-ldap
      port: 1389
      targetPort: tcp-ldap
      protocol: TCP
  selector:
    app.kubernetes.io/name: openldap
