challenge-1/ingress-host-docker-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host.docker.internal
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.org/mergeable-ingress-type: master
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - host.docker.internal
    secretName: host.docker.internal
  rules:
  - host: host.docker.internal
